--- a/.github/workflows/pr_target.yml
+++ b/.github/workflows/pr_target.yml
@@ -11,8 +11,15 @@ jobs:
   build_and_test_and_merge:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checking out PR code
+        uses: actions/checkout@v3
+        if: ${{ github.event_name == 'pull_request_target' }}
+        with:
+          # Number of commits to fetch. 0 indicates all history for all branches and tags.
+          # Default: 1
+          fetch-depth: '0'
+          # This is to get the PR code instead of the repo code
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Building ... 
         run: |
