--- a/.github/workflows/pr_target.yml
+++ b/.github/workflows/pr_target.yml
@@ -1,4 +1,4 @@
-name: PR TARGET CI
+name: PR CI
 
 on: 
   pull_request_target: 
@@ -8,12 +8,13 @@ env:
   MY_SECRET: ${{ secrets.MY_SECRET }}
   
 jobs:
-  build_and_test_and_merge:
+  prt_build_test_and_merge:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checking out PR code
-        uses: actions/checkout@v3
-        if: ${{ github.event_name == 'pull_request_target' }}
+      # checkout PR code
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           # Number of commits to fetch. 0 indicates all history for all branches and tags.
           # Default: 1
@@ -21,20 +22,21 @@ jobs:
           # This is to get the PR code instead of the repo code
           ref: ${{ github.event.pull_request.head.sha }}
 
+      # Simulation of a compilation
       - name: Building ... 
         run: |
           mkdir ./bin
-          echo "My bin file-1" > ./bin/mybin.exe
+          touch ./bin/mybin.exe
           ls -lR 
-
       
-      # Runs tests
+      # Simulation of running tests
       - name: Running tests ...
         id : run_tests
         run: |
           echo Running tests..
           chmod +x runtests.sh
-          ./runtests.sh
+          cat ./runtests.sh
+          ./runtests.sh "${{ github.event.pull_request.user.login }}" "${{ github.workflow }}"
           export ret_value=$?
           echo ret_value $ret_value
           cat runtests.out
@@ -61,7 +63,7 @@ jobs:
       - name: pr_merge_pr_true
         if: steps.check_pr.outputs.merge == 'true' && steps.run_tests.outputs.run_tests == 'OK'
         run: |
-          echo "The merge check was ${{ steps.check_pr.outputs.merge }}"
+          echo "The merge check for PR id $PR_ID was ${{ steps.check_pr.outputs.merge }}"
           echo "Merge conditions successfully MEET!!!"
           echo "Merging .."
           curl -L \
@@ -69,28 +71,5 @@ jobs:
                   -H "Accept: application/vnd.github+json" \
                   -H "Authorization: Bearer $GITHUB_PAT" \
                   -H "X-GitHub-Api-Version: 2022-11-28" \
-                  https://api.github.com/repos/lgvorg1/"${{github.event.repository.name}}"/pulls/"$PR_ID"/merge \
+                  https://api.github.com/repos/lgvorg1/"${{github.event.repository.name}}"/pulls/${{github.event.number}}/merge \
                   -d '{"commit_title":"Expand enum","commit_message":"Add a new value to the merge_method enum"}'
-          
-      - name: Archive building artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: archive-bin
-          path: |
-            bin
-
-      #- name: Archive code coverage results
-      #  uses: actions/upload-artifact@v3
-      #  with:
-      #    name: archive-output
-      #    path: output/output.txt
-
-      #- uses: actions/download-artifact@v3
-      #  with:
-      #    name: archive-dist
-      #    path: path/to/artifact
-
-      #- name: Display structure of downloaded files
-      #  run: ls -R
-      #  working-directory: path/to/artifact
-
