--- a/.github/workflows/xygeni_pr_target.yml
+++ b/.github/workflows/xygeni_pr_target.yml
@@ -1,6 +1,6 @@
-# This is a basic workflow to help you get started with Actions
+# This is a basic workflow to help you get started with Actions 
 
-name: Xygeni Scanner on pr target (CMD)
+name: Xygeni CI/CD Security Scan
 
 # Controls when the workflow will run
 on:
@@ -17,12 +17,12 @@ env:
   XY_USERNAME: ${{ secrets.XY_USERNAME_PRO }}
   XY_PASSWORD: ${{ secrets.XY_PASSWORD_PRO }}
   XY_URL: ${{ secrets.XY_URL_PRO }}
-  XY_PRJ_NAME: LGV-GH-${{ github.event.repository.name }}-CMD
+  XY_PRJ_NAME: LGV-GH-${{ github.event.repository.name }}
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel 
+
 jobs:
-  # This workflow contains a single job called "build"
-  build_xy_pr:
+  # This workflow contains a single job called "xygeni_security_scan"
+  xygeni_cicd_security_scan:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -36,7 +36,7 @@ jobs:
         run: echo EVENT  ${{ github.event_name }}
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: Checking out PR code
         if: ${{ github.event_name == 'pull_request_target' }}
         with:
@@ -47,7 +47,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         name: Checking out main code
         if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
         with:
@@ -67,13 +67,16 @@ jobs:
       # Runs a set of commands using the runners shell 
       - name: Download Xygeni Scanner 
         run: |
-          echo Downloading Xygeni Scanner ${{ github.event_name }} ....
-          curl -L https://get.xygeni.io/latest/scanner/install.sh | /bin/bash -s -- -u ${{ env.XY_USERNAME }} -p ${{ env.XY_PASSWORD }} -s ${{ env.XY_URL }} -d ${GITHUB_WORKSPACE}/scanner 
-
+          echo Downloading Xygeni Scanner ....
+          curl -L https://get.xygeni.io/latest/scanner/install.sh | /bin/bash -s -- -u $XY_USERNAME -p $XY_PASSWORD -s $XY_URL -d ${GITHUB_WORKSPACE}/scanner 
+          cat ${GITHUB_WORKSPACE}/scanner/conf/codetampering/ccm/workflow_modification.yml | grep changeTypesToConsider
+          sed -i 's/changeTypesToConsider: M/changeTypesToConsider: AM/g' ${GITHUB_WORKSPACE}/scanner/conf/codetampering/ccm/workflow_modification.yml
+          cat ${GITHUB_WORKSPACE}/scanner/conf/codetampering/ccm/workflow_modification.yml | grep changeTypesToConsider
+          
       # Runs a set of commands using the runners shell
       - name: Execution Xygeni Scanner (vuln)
         run: |
           echo Executing Xygeni scan ....    
-          ${GITHUB_WORKSPACE}/scanner/xygeni scan --never-fail --no-conf-download -n ${{ env.XY_PRJ_NAME }} --dir ${GITHUB_WORKSPACE} -e **/scanner/**
+          ${GITHUB_WORKSPACE}/scanner/xygeni scan --never-fail --run="inventory,misconf,codetamper" --no-conf-download -n ${{ env.XY_PRJ_NAME }} --dir ${GITHUB_WORKSPACE} -e **/scanner/**
         env:
           GITHUB_PAT: ${{ secrets.GH_PAT }}
